platform/gateway/harbor-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: gateway
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "harbor.test.baokuaiyun.com"
  rules:
    - backendRefs:
        - name: harbor
          namespace: harbor
          port: 80
